fix: text align

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
+  text-align: center;
 }
 
 span {
@@ -23,3 +24,6 @@ span {
   margin: 5px;
 }
 
+h1 {
+
+}
